--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": ">=5.3.3",
         "zendframework/zendframework": "2.1.*",
-        "zf-commons/zfc-user": "dev-master"
+        "zfc-commons/zfc-user": "dev-master"
     },
     "autoload": {
         "psr-0": {
